Fix Misaligned Hr

--- a/src/styles/components/toolbar.styl
+++ b/src/styles/components/toolbar.styl
@@ -1,6 +1,5 @@
 .toolbar
   @extend .div-shadow
-  align-items: center
   background-color: $bisque
   display: flex
   flex-direction: column
@@ -17,6 +16,7 @@
     width: 60%
 
   button
+    align-self: center
     background-color: transparent
     border: 1px solid transparent
     color: $plum
@@ -53,7 +53,6 @@
     width: 13rem
 
     hr:first-of-type
-      align-self: left
       border: 3px solid $plum
       width: 25%
 
